# iscc-schema

./: .editorconfig  .gitignore  .stoplight.json  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  zensical.toml
.github/workflows/: docs.yml  release.yml  tests.yml
api/: index.html
changelog/: index.html
context/: 0.1.0.jsonld  0.2.0.jsonld  0.3.0.jsonld  0.3.1.jsonld  0.3.2.jsonld  0.3.5.jsonld  0.3.6.jsonld  0.3.8.jsonld  index.html  iscc.json  iscc.jsonld  isccmeta.jsonld
docs/: CNAME  changelog.md  contributing.md  guide.md  index.md  llms.txt  robots.txt  versioning.md
docs/api/: index.html
docs/context/: 0.1.0.json  0.2.0.jsonld  0.3.0.jsonld  0.3.2.jsonld  0.3.3.jsonld  0.5.0.jsonld  index.md  iscc.json  iscc.jsonld  isccmeta.jsonld
docs/examples/: did.json  index.md  vc.json
docs/includes/: abbreviations.md  terms-iscc.md  terms-schema.md  terms-seed.md  terms-service.md
docs/javascripts/: copilot.js  copypage.js
docs/overrides/: main.html
docs/reference/: for-coding-agents.md
docs/schema/: 0.1.0.json  0.2.0.json  0.2.1.json  0.3.0.json  0.3.2.json  0.3.5.json  0.3.6.json  0.3.7.json  0.3.9.json  0.4.0.json  0.4.1.json  0.5.0.json  genai.json  genai.md  index.md  isbn.json  isbn.md  iscc.json  iscc.md  isrc.json  isrc.md  tdm.json  tdm.md
docs/stylesheets/: copilot.css  extra.css
docs/terms/: index.md
examples/: did.json  index.html  vc.json
includes/abbreviations/: index.html
includes/terms-iscc/: index.html
includes/terms-schema/: index.html
iscc_api/: schema.py
iscc_api/models/: iscc.yaml
iscc_api/reference/: generator.yaml
iscc_schema/: __init__.py  aliases.json  base.py  base_v2.py  contexts.py  fields.py  generator.py  recovery.py  schema.py  schema_v2.py  seed_isbn.py  seed_isrc.py  service_genai.py  service_tdm.py
iscc_schema/api/: vocab.yaml
iscc_schema/models/: genai.yaml  isbn.yaml  iscc-all.yaml  iscc-basic.yaml  iscc-chains.yaml  iscc-collection.yaml  iscc-crypto.yaml  iscc-declaration.yaml  iscc-embeddable.yaml  iscc-extended.yaml  iscc-generator-response.yaml  iscc-generator.yaml  iscc-jsonld.yaml  iscc-minimal.yaml  iscc-nft.yaml  iscc-properties.yaml  iscc-technical.yaml  iscc.yaml  isrc.yaml  tdm.yaml
iscc_schema/reference/: generator.yaml  iscc-generator-service.yaml  iscc-generator.yaml  iscc-service-generator.yaml
overrides/partials/integrations/analytics/: custom.html
schema/: 0.1.0.json  0.2.1.json  0.3.0.json  0.3.2.json  0.3.3.json  0.3.4.json  0.3.7.json  0.3.9.json  index.html  iscc.json
scripts/: gen_llms_full.py
search/: search_index.json
stylesheets/: extra.css
terms/: index.html
tests/: test_generator.py  test_iscc_api.py  test_iscc_basic.py  test_iscc_embeddable.py  test_iscc_meta.py  test_iscc_minimal.py  test_iscc_properties.py  test_schema.py  test_seed_isbn.py  test_seed_isrc.py  test_service_tdm.py  test_unified_schema.py
tools/: build_code.py  build_docs.py  build_json_ld_context.py  build_json_schema.py  build_terms.py  convert_lf.py  format_yaml.py  fromat_yaml.py
