[project]
name = "iscc-schema"
version = "0.5.0"
description = "ISCC - JSON-LD Metadata and OpenAPI Service Descriptions"
authors = [{ name = "Titusz", email = "tp@py7.de" }]
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "iscc",
    "identifier",
    "media",
    "content",
    "hash",
    "blockchain",
    "similarity",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pydantic>=2",
    "jcs>=0.2",
]

[project.urls]
Homepage = "https://iscc.codes"
Repository = "https://github.com/iscc/iscc-schema"
Documentation = "https://schema.iscc.codes/"
Changelog = "https://schema.iscc.codes/changelog"
"Bug Tracker" = "https://github.com/iscc/iscc-schema/issues"

[dependency-groups]
dev = [
    "pytest",
    "datamodel-code-generator",
    "poethepoet",
    "black",
    "mkdocs-material>=9.0",
    "PyLD",
    "requests",
]

[tool.black]
line-length = 100
target-version = ['py310']
preview = true


[tool.poe.tasks]
update = { cmd = "uv sync --upgrade", help = "Update project dependencies"}
fromatyaml = { script = "tools.format_yaml:reformat", help = "Reformat yaml files"}
buildcode = { script = "tools.build_code:build", help = "Build code for API models"}
formatcode = { cmd = "black .", help = "Code style formating with black" }
buildterms = { script = "tools.build_terms:build", help = "Build markdown for terms" }
buildschema = { script = "tools.build_json_schema:build", help = "Generate JSON Schema" }
buildcontext = { script = "tools.build_json_ld_context:build", help = "Generate JSON-LD Context" }
builddocs = { script = "tools.build_docs:build", help = "Copy README.md to docs/index.md" }
test = { cmd = "pytest", help = "Run tests"}
all = ["fromatyaml", "buildcode", "buildterms", "buildcontext", "buildschema", "formatcode", "builddocs", "test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
